--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: mariadb:10.1
     environment:
       - MYSQL_ROOT_PASSWORD=neonorb
+    ports:
+      - 3306:3306
 # phpMyAdmin for database administration.
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
@@ -13,6 +15,8 @@ services:
       - PMA_HOST=database1
       - PMA_USER=root
       - PMA_PASSWORD=neonorb
+    depends_on:
+      - db
     ports:
       - 8080:80
     links:
@@ -25,6 +29,8 @@ services:
     ports:
       - 80:80
       - 443:443
+    depends_on:
+      - tomcat
     links:
       - db:database1
       - tomcat:tomcat1
@@ -37,5 +43,7 @@ services:
       - ./tomcat/website-config.yml:/website-config.yml:rw
     ports:
       - 8888:8080
+    depends_on:
+      - db
     links:
       - db:database1
